; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tlink.c_file_push.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tlink.c_file_push.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file_stack_entry = type { %struct.file_stack_entry*, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@file_stack_obstack = common dso_local global i32 0, align 4
@file_stack = common dso_local global %struct.file_stack_entry* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @file_push to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @file_push(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.file_stack_entry*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %20

9:                                                ; preds = %1
  %10 = call %struct.file_stack_entry* @obstack_alloc(i32* @file_stack_obstack, i32 16)
  store %struct.file_stack_entry* %10, %struct.file_stack_entry** %3, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = load %struct.file_stack_entry*, %struct.file_stack_entry** %3, align 8
  %13 = getelementptr inbounds %struct.file_stack_entry, %struct.file_stack_entry* %12, i32 0, i32 1
  store %struct.TYPE_3__* %11, %struct.TYPE_3__** %13, align 8
  %14 = load %struct.file_stack_entry*, %struct.file_stack_entry** @file_stack, align 8
  %15 = load %struct.file_stack_entry*, %struct.file_stack_entry** %3, align 8
  %16 = getelementptr inbounds %struct.file_stack_entry, %struct.file_stack_entry* %15, i32 0, i32 0
  store %struct.file_stack_entry* %14, %struct.file_stack_entry** %16, align 8
  %17 = load %struct.file_stack_entry*, %struct.file_stack_entry** %3, align 8
  store %struct.file_stack_entry* %17, %struct.file_stack_entry** @file_stack, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i32 1, i32* %19, align 4
  br label %20

20:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.file_stack_entry* @obstack_alloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
